tests/ui/impl-trait/issues/issue-70877.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-70877.rs:30:9
   |
LL |     let func = bar.next().unwrap();
   |         ^^^^
LL |     return func(&"oof");
   |            ------------ type must be known at this point
   |
help: consider giving `func` an explicit type
   |
LL |     let func: /* Type */ = bar.next().unwrap();
   |             ++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
